    Thus, any user-defined object can ensure correct treatment by the
    aforementioned functions by properly overloading the "size"
    function.

 ** The functions issymmetric and ishermitian accept an option "nonskew"
    or "skew" to calculate the symmetric or skew-symmetric property
    of a matrix.  Performance has also been increased.

 ** The issorted function now uses a direction option of "ascend" or
    "descend" to make it compatible with both the sort function and
    with Matlab.  Change all uses of "ascending" and "descending" in
    existing code to the new options.

 ** The strncmp and strncmpi functions now return true if the two input
    strings match, even though the number of characters specified by N
    exceeds the string length.  This behavior more closely matches
    common sense and is Matlab compatible.  Example:

      Octave 5.0 : strncmp ("abc", "abc", 100) => true
      Previously : strncmp ("abc", "abc", 100) => false

 ** The intmax, intmin, and flintmax functions now accept a variable
    as input.  This supports a common programming usage which is to
    query the range of an existing variable.  Existing code can be
    simplified by removing the call to "class" that was previously
    required.  Example:

                   x = int8 (3);
      Octave 5.0 : range = [ intmin(x), intmax(x) ]
      Previously : range = [ intmin(class(x)), intmax(class(x)) ]

 ** The ranks function has been recoded for performance and is now 25X
    faster.  In addition, it now supports a third argument that
    specifies how to resolve the ranking of tie values.

 ** The fsolve function has been tweaked to use larger step sizes when
    calculating the Jacobian of a function with finite differences.
    This leads to faster convergence.  The default solver options have
    also changed to be Matlab compatible.  This *may* result in existing
    code producing different results.

          Option     |  New Default   |  Old Default