@@ -19,12 +19,24 @@
 ## -*- texinfo -*-
 ## @deftypefn  {} {} isdefinite (@var{A})
 ## @deftypefnx {} {} isdefinite (@var{A}, @var{tol})
-## Return 1 if @var{A} is symmetric positive definite within the
-## tolerance specified by @var{tol} or 0 if @var{A} is symmetric
-## positive semi-definite.  Otherwise, return -1.
+## Return true if @var{A} is symmetric positive definite matrix within the
+## tolerance specified by @var{tol}.
 ##
 ## If @var{tol} is omitted, use a tolerance of
-## @code{100 * eps * norm (@var{A}, "fro")}
+## @code{100 * eps * norm (@var{A}, "fro")}.
+##
+## Background: A positive definite matrix has eigenvalues which are all
+## greater than zero.  A positive semi-definite matrix has eigenvalues which
+## are all greater than or equal to zero.  The matrix @var{A} is very likely to
+## be positive semi-definite if the following two conditions hold for a
+## suitably small tolerance @var{tol}.
+##
+## @example
+## @group
+## isdefinite (@var{A}) @result{} 0
+## isdefinite (@var{A} + 5*@var{tol}, @var{tol}) @result{} 1
+## @end group
+## @end example
 ## @seealso{issymmetric, ishermitian}
 ## @end deftypefn
 
@@ -38,50 +50,58 @@ function retval = isdefinite (A, tol)
     print_usage ();
   endif
 
+  ## Validate inputs
+  retval = false;
+  if (! isnumeric (A))
+    return;
+  endif
+
   if (! isfloat (A))
     A = double (A);
   endif
 
   if (nargin == 1)
     tol = 100 * eps (class (A)) * norm (A, "fro");
+  elseif (! (isnumeric (tol) && isscalar (tol) && tol >= 0))
+    error ("isdefinite: TOL must be a scalar >= 0");
   endif
 
   if (! ishermitian (A, tol))
-    error ("isdefinite: A must be a Hermitian matrix");
+    return;
   endif
 
   e = tol * eye (rows (A));
-  [r, p] = chol (A - e);
+  [~, p] = chol (A - e);
   if (p == 0)
-    retval = 1;
-  else
-    [r, p] = chol (A + e);
-    if (p == 0)
-      retval = 0;
-    else
-      retval = -1;
-    endif
+    retval = true;
   endif
 
 endfunction
 
 
 %!test
-%! A = [-1 0; 0 -1];
-%! assert (isdefinite (A), -1);
+%! A = [-1, 0; 0, -1];
+%! assert (isdefinite (A), false);
 
 %!test
-%! A = [1 0; 0 1];
-%! assert (isdefinite (A), 1);
+%! A = [1, 0; 0, 1];
+%! assert (isdefinite (A), true);
 
 %!test
-%! A = [2 -1 0; -1 2 -1; 0 -1 2];
-%! assert (isdefinite (A), 1);
+%! A = [2, -1,  0; -1, 2, -1; 0, -1, 2];
+%! assert (isdefinite (A), true);
 
+## Test for positive semi-definite matrix
 %!test
-%! A = [1 0; 0 0];
-%! assert (isdefinite (A), 0);
+%! A = [1, 0; 0, 0];
+%! assert (isdefinite (A), false);
+%! tol = 100*eps;
+%! assert (isdefinite (A+5*tol, tol), true);
+
+%!assert (! isdefinite (magic (3)))
 
 %!error isdefinite ()
 %!error isdefinite (1,2,3)
-%!error <A must be a Hermitian matrix> isdefinite ([1 2; 3 4])
+%!error <TOL must be a scalar .= 0> isdefinite (1, {1})
+%!error <TOL must be a scalar .= 0> isdefinite (1, [1 1])
+%!error <TOL must be a scalar .= 0> isdefinite (1, -1)
